доработка документации для ендпоинта "/showInfo"
